<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="81dp">

    <Button
            android:text="@string/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reset" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="25sp"/>
    <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp" app:srcCompat="@drawable/icon"
            android:id="@+id/image_icon"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image_iocn_t"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.143"/>
    <Button
            android:text="@string/button_up"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_up"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp" android:layout_marginRight="60dp" android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_down" android:textSize="25sp"/>
    <Button
            android:text="@string/button_down"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_down"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp" android:layout_marginRight="60dp" android:layout_marginBottom="164dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="25sp"/>
    <Button
            android:text="@string/strStartEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:textSize="25sp"/>
    <TextView
            android:text="@string/text_gameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/text_haveCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_myCoin"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="512dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/text_haveCoinFirst"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_myCoinValue"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_myCoin"/>
    <TextView
            android:text="@string/text_kakeCoin"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_betCoin"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_myCoinValue"/>
    <TextView
            android:text="@string/text_kakeCoinFirst"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_betCoinValue"
            android:textSize="30sp"
            android:layout_marginBottom="164dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_betCoin"/>
</android.support.constraint.ConstraintLayout>