<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity">
    <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp" app:srcCompat="@drawable/icon"
            android:id="@+id/image_icon"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image_iocn_t"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.565"
            app:layout_constraintHorizontal_bias="0.946"/>
    <Button
            android:text="@string/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:textSize="25sp"/>
    <TextView
            android:text="@string/text_haveCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_myCoin"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="512dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/text_haveCoinFirst"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_myCoinValueGame"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_myCoin"/>
    <TextView
            android:text="@string/text_kakeCoin"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_betCoin"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_myCoinValueGame"/>
    <TextView
            android:text="@string/text_kakeCoinFirst"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_betCoinValueGame"
            android:textSize="30sp"
            android:layout_marginBottom="164dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_betCoin"/>
    <TextView
            android:text="@string/text_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_msg" android:textSize="40sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.449"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/question"
            android:id="@+id/btn_img01"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="@+id/btn_img02" android:contentDescription="@string/image_iocn_t"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/question"
            android:id="@+id/btn_img02"
            android:scaleType="fitCenter" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_iocn_t"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/question"
            android:id="@+id/btn_img03"
            android:scaleType="fitCenter" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp" android:layout_marginRight="30dp"
            app:layout_constraintTop_toTopOf="@+id/btn_img02"
            android:contentDescription="@string/image_iocn_t"/>

</android.support.constraint.ConstraintLayout>